// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferMenu reducer tests returns initial state 1`] = `
Immutable.Map {
  "transferSearchInput": "",
  "transferTabIndex": 0,
  "focusedTransferItemIndex": -1,
  "showTransferDialpad": false,
  "transferLists": Immutable.Map {
    "userAssignedTransferListsLoadingState": true,
  },
}
`;

exports[`TransferMenu reducer tests sets agentsListVisibleState 1`] = `
Immutable.Map {
  "agentsListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets focusedTransferItemIndex 1`] = `
Immutable.Map {
  "focusedTransferItemIndex": 0,
}
`;

exports[`TransferMenu reducer tests sets queuesListVisibleState 1`] = `
Immutable.Map {
  "queuesListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets transferSearchInput 1`] = `
Immutable.Map {
  "transferSearchInput": "mockTransferSearchInput",
}
`;

exports[`TransferMenu reducer tests sets transferTabIndex 1`] = `
Immutable.Map {
  "transferTabIndex": 1,
}
`;

exports[`TransferMenu reducer tests sets userAssignedTransferLists 1`] = `
Immutable.Map {
  "transferLists": Immutable.Map {
    "userAssignedTransferListsLoadingState": false,
    "userAssignedTransferLists": Immutable.List [
      Immutable.Map {
        "mockTransferListKey": "mockTransferListValue",
      },
    ],
  },
}
`;

exports[`TransferMenu reducer tests sets userAssignedTransferListsLoadingState 1`] = `
Immutable.Map {
  "transferLists": Immutable.Map {
    "userAssignedTransferListsLoadingState": true,
  },
}
`;

exports[`TransferMenu reducer tests sets userAssignedTransferListsVisibleState 1`] = `
Immutable.Map {
  "transferLists": Immutable.Map {
    "userAssignedTransferListsVisibleState": Immutable.Map {
      "assignedTransferList-abc": true,
    },
  },
}
`;

exports[`TransferMenu reducer tests sets visibleStateOfAllUserAssignedTransferLists 1`] = `
Immutable.Map {
  "transferLists": Immutable.Map {
    "visibleStateOfAllUserAssignedTransferLists": true,
  },
}
`;

exports[`TransferMenu reducer tests updates showTransferDialpad state 1`] = `
Immutable.Map {
  "showTransferDialpad": true,
}
`;
